      entry for the previous release.
    + [NT] Add missing "debfiles" in the list of collections
      deprecated in 2.5.28.  It was deprecated in that release
      despite the omission.

  * lib/Lintian/Check.pm:
    + [NT] Rewrite check_spelling{,_picky} with a new interface,
      which is better suited for additional purposes than just
      emitting Lintian tags.
  * lib/Lintian/Collect/Package.pm:
    + [NT] Create "faux" Lintian::Path entries for missing
      intermediate directories.  This avoids a crash and made
      some checks work correctly even in the absence of such
      immediate directories.  (Closes: LP: #1351380)
  * lib/Lintian/Path.pm:
    + [NT] Apply patch from Tomasz Buchert to add "timestamp"
      method.
    + [NT] Add "faux" method that returns at truth value for
      path entries, which Lintian has created from templates
      to fully connect all path entries in the package.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Expand BTS links using https rather than http.
  * lib/Test/Lintian.pm:
    + [NT] Output spelling mistakes as "diag()" messages now.

  * mail-templates/source-is-missing:
    + [BR] Apply patch from Holger Levsen improving language.

 -- Niels Thykier <niels@thykier.net>  Sat, 30 May 2015 18:42:22 +0200

lintian (2.5.31) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-intended-distribution
      - dbus-policy-excessively-broad
      - debian-pycompat-is-obsolete
      - debian-watch-file-accesses-pypi-over-http
      - debian-watch-file-unsupported-pypi-url
      - dep5-copyright-license-name-not-unique
      - dep5-file-paragraph-reference-header-paragraph
      - file-should-not-be-compressed
      - multiline-architecture-field
      - python-version-current-is-deprecated
      - uses-no-compression-for-control-tarball
      - uses-no-compression-for-data-tarball
      - xs-testsuite-header-in-debian-control
    + Removed:
      - bad-intended-distibution